--- a/portfolio.html
+++ b/portfolio.html
@@ -123,56 +123,60 @@
   </main>
   <footer class="footer">
     <div class="container footer-div">
-       
-      <a class="footer-webstudio" href="#"
-        >Web<span class="footer-studio">Studio</span></a
-      >
-     <div class="footer-block">
-      <ul class="footer-list">
-        <li class="footer-list-item">
-          <a
-            href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8"
-            class="footer-address"
-            >Місто Київ пр-т Лесі Українки, 26</a
-          >
-        </li>
-        <li class="footer-list-item">
-          <a href="mailto:info@devstudio.com" class="footer-contact"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="footer-list-item">
-          <a href="tel:+380961111111" class="footer-contact"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-       <div class="footer-wrapper">
-      <h5 class="footer-heading">приєднуйтесь</h5>
-      <ul class="footer-svg-list">
-        <li class="footer-svg-list-item">
-          <svg class="icon-footer">
-            <use href="./icons.svg#icon-instagram"></use>
-          </svg>
-        </li>
-        <li class="footer-svg-list-item">
-          <svg class="icon-footer">
-            <use href="./icons.svg#icon-twitter"></use>
-          </svg>
-        </li>
-        <li class="footer-svg-list-item">
-          <svg class="icon-footer">
-            <use href="./icons.svg#icon-facebook"></use>
-          </svg>
-        </li>
-        <li class="footer-svg-list-item">
-          <svg class="icon-footer">
-            <use href="./icons.svg#icon-linkedin"></use>
-          </svg>
-        </li>
-      </ul>
-    </div>
-  </div>
+
+      <a class="footer-webstudio" href="#">Web<span class="footer-studio">Studio</span></a>
+      <div class="footer-block">
+        <ul class="footer-list">
+          <li class="footer-list-item">
+            <a href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8" class="footer-address">Місто Київ пр-т Лесі Українки, 26</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+          </li>
+        </ul>
+        <div class="footer-wrapper">
+          <h5 class="footer-heading">приєднуйтесь</h5>
+          <ul class="footer-svg-list">
+            <li class="footer-svg-list-item">
+              <svg class="icon-footer">
+                <use href="./icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-svg-list-item">
+              <svg class="icon-footer">
+                <use href="./icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-svg-list-item">
+              <svg class="icon-footer">
+                <use href="./icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-svg-list-item">
+              <svg class="icon-footer">
+                <use href="./icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-form">
+          <form>
+            <label>
+              <h5 class="footer-heading">підпишіться на розсилку</h5>
+              <input class="footer-email" type="email" name="email" placeholder="    E-mail">
+            </label>
+          <button class="subscribe-button" type="submit"><div class="button-wrapper">Підписатися 
+            <svg class="icon-send">
+              <use href="./icons.svg#icon-send"></use>
+            </svg>
+          </div>
+          </button>
+          </form>
+        </div>
+      </div>
   </footer>
 </body>
 </html>
