--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="header-web">Web</span>Studio</a>
       <nav class="header-nav">
         <ul class="header-menu">
-          <li><a href="index.html" class="header-menu-link">Студія</a></li>
+          <li><a href="index.html" class="header-menu-link active">Студія</a></li>
           <li>
             <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
           </li>
@@ -49,7 +49,7 @@
   </header>
   <main>
     <section class="banner">
-      <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br>ВАШОГО БІЗНЕСУ</h1>
+      <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
       <button class="btn-open" data-modal-open>Замовити послугу</button>
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
@@ -61,29 +61,29 @@
           </button>
           <h2 class="modal-heading">Залиште свої дані, ми вам передзвонимо</h2>
           <form class="registration-form">
+            <p>Ім'я</p>
             <label class="registration-label">
-              <p>Ім'я</p>
+              
               <svg>
                 <use href="./icons.svg#icon-human"></use>
               </svg>
               <input type="text" name="Name">
-            </label>
+            </label>              <p>Телефон</p>
             <label class="registration-label">
-              <p>Телефон</p>
+
               <svg>
                 <use href="./icons.svg#icon-phone"></use>
               </svg>
               <input type="tel" name="tel" />
             </label>
+            <p>Пошта</p>
             <label class="registration-label">
-              <p>Пошта</p>
               <svg>
                 <use href="./icons.svg#icon-email2"></use>
               </svg>
               <input type="email" name="email" />
-            </label>
-            <label class="registration-label">
-              <p>Коментар</p>
+            </label><p>Коментар</p>
+            <label class="comment-label">
               <textarea name="comment" id="comment"></textarea>
             </label>
             <label class="checkbox">
