--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
        <ul class="header-menu">
          <li><a href="index.html" class="header-menu-link">Студія</a></li>
          <li>
-           <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
+           <a href="portfolio.html" class="header-menu-link active">Портфоліо</a>
          </li>
          <li><a href="#" class="header-menu-link">Контакти</a></li>
        </ul>
@@ -75,46 +75,73 @@
       <ul class="main-portfolio-list">
         <li class="portfolio-main">
           <img src="img/img(1).jpg" alt="ноутбук" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Технокряк</a>
           <p class="image-description">Веб-Сайт</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(2).jpg" alt="Баскетболісти" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Постер New Orlean vs Golden Star</a>
           <p class="image-description">Дизайн</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(3).jpg" alt="Логотип ресторану" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Ресторан Seafood</a>
           <p class="image-description">Додаток</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(4).jpg" alt="Навушники" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Проєкт Prime</a>
           <p class="image-description">Маркетинг</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(5).jpg" alt="Коробки" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Проєкт Boxes</a>
           <p class="image-description">Додаток</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(6).jpg" alt="Монітор" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Inspiration has no borders</a>
           <p class="image-description">Веб-Сайт</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(7).jpg" alt="Книга" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Видання Limit Editing</a>
           <p class="image-description">Дизайн</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(8).jpg" alt="Бірка" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Проєкт Lab</a>
           <p class="image-description">Маркетинг</p>
         </li>
         <li class="portfolio-main">
           <img src="img/img(9).jpg" alt="ноутбук" class="main-image" />
+          <div class="overlay">
+            <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+          </div>
           <a href="#" class="main-link">Growing Business</a>
           <p class="image-description">Додаток</p>
         </li>
