--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
       <button class="btn-open" data-modal-open>Замовити послугу</button>
       <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
+        <div class="modal is-visible">
 
           <button class="btn" data-modal-close>
             <svg class="cross">
