--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@100;400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="css/main.min.css" />
 </head>
 
 <body>
