--- a/portfolio.html
+++ b/portfolio.html
@@ -16,64 +16,60 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="css/main.min.css" />
 </head>
-
 <body>
   <header class="header">
     <div class="container header-wrap">
-     <a class="header-webstudio" href="index.html">
-       <span class="header-web">Web</span>Studio</a
-     >
-     <nav class="header-nav">
-       <ul class="header-menu">
-         <li><a href="index.html" class="header-menu-link">Студія</a></li>
-         <li>
-           <a href="portfolio.html" class="header-menu-link active">Портфоліо</a>
-         </li>
-         <li><a href="#" class="header-menu-link">Контакти</a></li>
-       </ul>
-     </nav>
-     <ul class="header-contact">
-       <li class="header-contact-item">
-         <svg class="email-svg">
-           <use href="./icons.svg#icon-email"></use>
-         </svg>
-         <a href="mailto:info@devstudio.com" class="header-contact-link"
-           >info@devstudio.com</a
-         >
-       </li>
-       <li class="header-contact-item">
-         <svg class="phone-svg">
-           <use href="./icons.svg#icon-phone"></use>
-         </svg>
-         <a href="tel:+380961111111" class="header-contact-link"
-           >+38 096 111 11 11</a
-         >
-       </li>
-     </ul>
-   </div>
-   </header>
+      <a class="header-logo" href="index.html">
+        <span class="header-web">Web</span>Studio</a>
+        <svg width="40" height="40" class="header-modal-svg">
+          <use href="icons.svg#icon-menu_40px"></use>
+        </svg>
+      <nav class="header-nav">
+        <ul class="header-menu">
+          <li><a href="index.html" class="header-menu-link">Студія</a></li>
+          <li>
+            <a href="portfolio.html" class="header-menu-link active">Портфоліо</a>
+          </li>
+          <li><a href="#" class="header-menu-link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="header-contact">
+        <li class="header-contact-item">
+          <svg class="email-svg">
+            <use href="./icons.svg#icon-email"></use>
+          </svg>
+          <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
+        </li>
+        <li class="header-contact-item">
+          <svg class="phone-svg">
+            <use href="./icons.svg#icon-phone"></use>
+          </svg>
+          <a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </header>
   <main class="main container">
     <section class="button-section">
-      <div class="portfolio">
         <ul class="main-button-list">
-          <li><button type="button" class="portfolio-button"><p class="button-description">Усі</p></button></li>
-          <li>
+          <li class="main-button-list-item"><button type="button" class="portfolio-button"><p class="button-description">Усі</p></button></li>
+          <li class="main-button-list-item">
             <button type="button" class="portfolio-button"><p class="button-description">Веб-Сайти</p></button>
           </li>
-          <li>
+          <li class="main-button-list-item">
             <button type="button" class="portfolio-button"><p class="button-description">Додатки</p></button>
           </li>
-          <li>
+          <li class="main-button-list-item">
             <button type="button" class="portfolio-button"><p class="button-description">Дизайн</p></button>
           </li>
-          <li>
+          <li class="main-button-list-item">
             <button type="button" class="portfolio-button"><p class="button-description">Маркетинг</p></button>
-          </li>
+          </li class="main-button-list-item">
         </ul>
     </section>
     <section class="portfolio-main-section">
       <ul class="main-portfolio-list">
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(1).jpg" alt="ноутбук" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -81,7 +77,7 @@
           <a href="#" class="main-link">Технокряк</a>
           <p class="image-description">Веб-Сайт</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(2).jpg" alt="Баскетболісти" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -89,7 +85,7 @@
           <a href="#" class="main-link">Постер New Orlean vs Golden Star</a>
           <p class="image-description">Дизайн</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(3).jpg" alt="Логотип ресторану" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -97,7 +93,7 @@
           <a href="#" class="main-link">Ресторан Seafood</a>
           <p class="image-description">Додаток</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(4).jpg" alt="Навушники" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -105,7 +101,7 @@
           <a href="#" class="main-link">Проєкт Prime</a>
           <p class="image-description">Маркетинг</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(5).jpg" alt="Коробки" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -113,7 +109,7 @@
           <a href="#" class="main-link">Проєкт Boxes</a>
           <p class="image-description">Додаток</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(6).jpg" alt="Монітор" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -121,7 +117,7 @@
           <a href="#" class="main-link">Inspiration has no borders</a>
           <p class="image-description">Веб-Сайт</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(7).jpg" alt="Книга" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -129,7 +125,7 @@
           <a href="#" class="main-link">Видання Limit Editing</a>
           <p class="image-description">Дизайн</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(8).jpg" alt="Бірка" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -137,7 +133,7 @@
           <a href="#" class="main-link">Проєкт Lab</a>
           <p class="image-description">Маркетинг</p>
         </li>
-        <li class="portfolio-main">
+        <li class="portfolio-list-item">
           <img src="img/img(9).jpg" alt="ноутбук" class="main-image" />
           <div class="overlay">
             <p class="overlay-p">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -150,7 +146,6 @@
   </main>
   <footer class="footer">
     <div class="container footer-div">
-
       <a class="footer-webstudio" href="#">Web<span class="footer-studio">Studio</span></a>
       <div class="footer-block">
         <ul class="footer-list">
@@ -165,7 +160,7 @@
           </li>
         </ul>
         <div class="footer-wrapper">
-          <h5 class="footer-heading">приєднуйтесь</h5>
+          <h5 class="footer-heading">ПРИЄДНУЙТЕСЬ</h5>
           <ul class="footer-svg-list">
             <li class="footer-svg-list-item">
               <svg class="icon-footer">
@@ -189,21 +184,21 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form>
-            <label>
-              <h5 class="footer-heading">підпишіться на розсилку</h5>
+          <form class="footer-form">
+            <label class="footer-label">
+              <h5 class="footer-heading">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h5>
               <input class="footer-email" type="email" name="email" placeholder="    E-mail">
             </label>
           <button class="subscribe-button" type="submit"><div class="button-wrapper">Підписатися 
             <svg class="icon-send">
               <use href="./icons.svg#icon-send"></use>
             </svg>
-          </div>
           </button>
           </form>
         </div>
       </div>
   </footer>
+  <script src="./modal.js"></script>
 </body>
+
 </html>
