--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebStudio</title>
+  <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@100;400;500;700;900&display=swap"
-
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.min.css" />
+</head>
+<body>
+  <header class="header">
+    <div class="container header-wrap">
+      <a class="header-logo" href="index.html">
+        <span class="header-web">Web</span>Studio</a>
+        <svg width="40" height="40" class="header-modal-svg">
+          <use href="icons.svg#icon-menu_40px"></use>
+        </svg>
+      <nav class="header-nav">
+        <ul class="header-menu">
+          <li><a href="index.html" class="header-menu-link active">Студія</a></li>
+          <li>
             <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
           </li>
           <li><a href="#" class="header-menu-link">Контакти</a></li>
@@ -157,7 +171,7 @@
         <h2 class="section-heading">Наша команда</h2>
         <ul class="main-list-team">
           <li class="team-item">
-            <img src="img/imgg(1).jpg" alt="Наша команда" class="main-team-image" width="270" height="260" />
+            <img src="img/imgg(1).jpg" alt="Наша команда" class="main-team-image"  />
             <h4 class="main-name">Ігор Дем'яненко</h4>
             <p class="main-description-job">Product Designer</p>
             <ul class="svg-list">
@@ -184,7 +198,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(2).jpg" alt="Наша команда" class="main-team-image" width="270" height="260" />
+            <img src="img/imgg(2).jpg" alt="Наша команда" class="main-team-image" />
             <h4 class="main-name">Ольга Рєпіна</h4>
             <p class="main-description-job">Frontend Developer</p>
             <ul class="svg-list">
@@ -211,7 +225,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(3).jpg" alt="Наша команд" class="main-team-image" width="270" height="260" />
+            <img src="img/imgg(3).jpg" alt="Наша команд" class="main-team-image" />
             <h4 class="main-name">Микола Тарасов</h4>
             <p class="main-description-job">Marketing</p>
             <ul class="svg-list">
@@ -238,7 +252,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(4).jpg" alt="Наша команд" class="main-team-image" width="270" height="260" />
+            <img src="img/imgg(4).jpg" alt="Наша команд" class="main-team-image" />
             <h4 class="main-name">Михайло Єрмаков</h4>
             <p class="main-description-job">UI Designer</p>
             <ul class="svg-list">
@@ -305,6 +319,7 @@
   </main>
   <footer class="footer">
     <div class="container footer-div">
+      <div class="footer-main-div">
       <a class="footer-webstudio" href="#">Web<span class="footer-studio">Studio</span></a>
       <div class="footer-block">
         <ul class="footer-list">
@@ -318,8 +333,9 @@
             <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
           </li>
         </ul>
+      </div>
         <div class="footer-wrapper">
-          <h5 class="footer-heading">приєднуйтесь</h5>
+          <h5 class="footer-heading">ПРИЄДНУЙТЕСЬ</h5>
           <ul class="footer-svg-list">
             <li class="footer-svg-list-item">
               <svg class="icon-footer">
@@ -343,21 +359,19 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form>
-            <label>
-              <h5 class="footer-heading">підпишіться на розсилку</h5>
+          <form class="footer-form">
+            <label class="footer-label">
+              <h5 class="footer-heading">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h5>
               <input class="footer-email" type="email" name="email" placeholder="    E-mail">
             </label>
           <button class="subscribe-button" type="submit"><div class="button-wrapper">Підписатися 
             <svg class="icon-send">
               <use href="./icons.svg#icon-send"></use>
             </svg>
-          </div>
           </button>
           </form>
         </div>
-      </div>
+    </div>
   </footer>
   <script src="./modal.js"></script>
 </body>
