--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container header-wrap">
       <a class="header-logo" href="index.html">
         <span class="header-web">Web</span>Studio</a>
-        <svg width="40" height="40" class="header-modal-svg">
+        <svg id="header-modal-svg" width="40" height="40" class="header-modal-svg">
           <use href="icons.svg#icon-menu_40px"></use>
-        </svg>
+         </svg>
       <nav class="header-nav">
         <ul class="header-menu">
           <li><a href="index.html" class="header-menu-link active">Студія</a></li>
