--- a/index.html
+++ b/index.html
@@ -21,9 +21,36 @@
     <div class="container header-wrap">
       <a class="header-logo" href="index.html">
         <span class="header-web">Web</span>Studio</a>
+        
+         <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
         <svg id="header-modal-svg" width="40" height="40" class="header-modal-svg">
           <use href="icons.svg#icon-menu_40px"></use>
          </svg>
+        </button>
+
+        <ul class="menu">
+          <li><a href="" class="link">About</a></li>
+          <li><a href="" class="link">Products</a></li>
+          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="" class="link">Career</a></li>
+        </ul>
+      </div>
+         <!-- <div class="header-modal">
+          <button class="btn-close">
+            <svg class="cross">
+              <use href="./icons.svg#icon-cross"></use>
+            </svg>
+          </button>
+          <ul>
+            <li>Студія</li>
+            <li>Портфоліо</li>
+            <li>Контакти</li>
+          </ul>
+        </div> -->
       <nav class="header-nav">
         <ul class="header-menu">
           <li><a href="index.html" class="header-menu-link active">Студія</a></li>
