--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div class="container header-wrap">
       <a class="header-logo" href="index.html">
         <span class="header-web">Web</span>Studio</a>
-        
-         <button
+        <button
           class="menu-toggle js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
@@ -31,33 +30,46 @@
           <use href="icons.svg#icon-menu_40px"></use>
          </svg>
         </button>
-
-        <ul class="menu">
-          <li><a href="" class="link">About</a></li>
-          <li><a href="" class="link">Products</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-          <li><a href="" class="link">Career</a></li>
-        </ul>
-      </div>
-         <!-- <div class="header-modal">
-          <button class="btn-close">
-            <svg class="cross">
-              <use href="./icons.svg#icon-cross"></use>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button class="menu-toggle js-close-menu">
+            <svg
+            class="header-modal-close"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                clip-rule="evenodd"
+              ></path>
             </svg>
           </button>
-          <ul>
-            <li>Студія</li>
-            <li>Портфоліо</li>
-            <li>Контакти</li>
+    
+          <ul class="menu-list">
+            <li><a href="index.html" class="link">Студія</a></li>
+            <li><a href="portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="#" class="link">Контакти</a></li>
           </ul>
-        </div> -->
+          <ul class="menu-contact-list">
+            <li><a href="tel:+380961111111" class="menu-contact-link menu-number">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="menu-contact-link menu-email">info@devstudio.com</a></li>
+          </ul>
+          <ul class="social-list">
+            <li><p class="social-name">Instagram</p></li>
+            <li><p class="social-name">Twitter</p></li>
+            <li><p class="social-name">Facebook</p></li>
+            <li><p class="social-name">LinkedIn</p></li>
+
+          </ul>
+        </div>
       <nav class="header-nav">
         <ul class="header-menu">
-          <li><a href="index.html" class="header-menu-link active">Студія</a></li>
-          <li>
+          <li class="header-menu-item" ><a href="index.html" class="header-menu-link active">Студія</a></li>
+          <li class="header-menu-item">
             <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
           </li>
-          <li><a href="#" class="header-menu-link">Контакти</a></li>
+          <li class="header-menu-item"><a href="#" class="header-menu-link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="header-contact">
