add responsive bg

--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
       <h2 class="section-heading">Чим ми займаємося</h2>
       <ul class="main-list-images">
         <li class="main-list-images-item">
-          <img src="img/box1.jpg" alt="зображення" class="main-image" width="370" height="294" />
+          <img src="img/job1.jpg" alt="зображення" class="main-image" width="370" height="294" />
           <p class="image-label">ДЕСКТОПНІ ДОДАТКИ</p>
         </li>
         <li class="main-list-images-item">
-          <img src="img/box2.jpg" alt="зображення" class="main-image" width="370" height="294" />
+          <img src="img/job2.jpg" alt="зображення" class="main-image" width="370" height="294" />
           <p class="image-label">МОБІЛЬНІ ДОДАТКИ</p>
         </li>
         <li class="main-list-images-item">
-          <img src="img/box3.jpg" alt="зображення" class="main-image" width="370" height="294" />
+          <img src="img/job3.jpg" alt="зображення" class="main-image" width="370" height="294" />
           <p class="image-label">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
         </li>
       </ul>
@@ -210,7 +210,7 @@
         <h2 class="section-heading">Наша команда</h2>
         <ul class="main-list-team">
           <li class="team-item">
-            <img src="img/imgg(1).jpg" alt="Наша команда" class="main-team-image"  />
+            <img src="img/teamimg1.jpg" alt="Наша команда" class="main-team-image"  />
             <h4 class="main-name">Ігор Дем'яненко</h4>
             <p class="main-description-job">Product Designer</p>
             <ul class="svg-list">
@@ -237,7 +237,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(2).jpg" alt="Наша команда" class="main-team-image" />
+            <img src="img/teamimg2.jpg" alt="Наша команда" class="main-team-image" />
             <h4 class="main-name">Ольга Рєпіна</h4>
             <p class="main-description-job">Frontend Developer</p>
             <ul class="svg-list">
@@ -264,7 +264,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(3).jpg" alt="Наша команд" class="main-team-image" />
+            <img src="img/teamimg3.jpg" alt="Наша команд" class="main-team-image" />
             <h4 class="main-name">Микола Тарасов</h4>
             <p class="main-description-job">Marketing</p>
             <ul class="svg-list">
@@ -291,7 +291,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="img/imgg(4).jpg" alt="Наша команд" class="main-team-image" />
+            <img src="img/teamimg4.jpg" alt="Наша команд" class="main-team-image" />
             <h4 class="main-name">Михайло Єрмаков</h4>
             <p class="main-description-job">UI Designer</p>
             <ul class="svg-list">
